coc panel spacing issues resolved

--- a/assets/_scss/_homeless-analysis.scss
+++ b/assets/_scss/_homeless-analysis.scss
@@ -478,9 +478,10 @@
     font-size:2em;
     font-style:inherit;
     font-weight: lighter;
-    margin: -15px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
     padding: 0;
     color:#0071BC;
+    line-height:30px;
   }
 
   .panel_desc{
